--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -23,7 +23,7 @@
   font-style: normal;
   line-height: 58px;
   color: #000;
-  letter-spacing: -4%;
+  letter-spacing: -.04em;
   text-align: center;
   position: absolute;
   top: auto;
